<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="hello_world">Hello world!</string>
    <string name="app_name">Teachers Little Helper</string>
    <string name="action_settings">Settings</string>

    <string name="selectAccount">Choose account for syncing:</string>
    <string name="about">about</string>
    <string name="aboutTitle">About TeachersLittleHelper</string>
    <string name="aboutContent">TeachersLittleHelper is an organiser app for teachers and instructors helping them to maintain control over all there different classes and students and the taught content of each class.\n
Online syncing allows you to share your data with various devices (e.g between Smartphone and Tablet).</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="cancel">Cancel</string>

    <string name="add_class">Add Class</string>
    <string name="delete_Class">Delete Class</string>
    <string name="updateClass">Update Class</string>


    <string name="newClass">New Class</string>
    <string name="newClassContent">New Date</string>
    <string name="updateClassContent">Update Class Content</string>
    <string name="newStudent">New Student</string>
    <string name="newClassTitle">Title</string>
    <string name="newClassLevel">Level</string>
    <string name="newClassDays">Days</string>
    <string name="newClassHour">Start Time</string>
    <string name="newClassDuration">End Time</string>
    <string name="newClassInfo">Info</string>
    <string name="newClassLocation">Location</string>
    <string name="newClassBtn">Create</string>
    <string name="notAllFieldsFilledOutWarning">All fields except Info and Level are mandatory! </string>
    <string name="classUpdated">Class updated</string>

    <string name="classFragment_studentsBtn">Students</string>
    <string name="menuAddStudent">Añadir Alumno</string>
    <string name="addStudent">Add Student</string>
    <string name="changeStudentData">Change</string>
    <string name="deleteStudent">Delete</string>

    <string name="AddContent">Add new content</string>
    <string name="NotifyAllStudents">Notify all students</string>

    <string name="newDate">Date(y-m-d)</string>
    <string name="newBook">Book used</string>
    <string name="newPages">Pages</string>
    <string name="newInfo">Info</string>
    <string name="addClassContent">Add</string>
    <string name="DateNotFilledOutWarning">Please select a Date! </string>
    <string name="contentAddedAlert">New Content added</string>
    <string name="contentDeletedAlert">Content deleted</string>
    <string name="contentUpdatedAlert">Content updated</string>
    <string name="contentTitle">Dates</string>

    <string name="updateContent">Update</string>
    <string name="deleteContent">Delete</string>

    <string name="newStudentName">Name</string>
    <string name="newStudentPhone">Phone</string>
    <string name="newStudentEmail">Email</string>
    <string name="studentAddedAlert">New Student added</string>
    <string name="studentUpdatedAlert">Student updated</string>
    <string name="studentDeletedAlert">Student deleted</string>
    <string name="studentTitle">Students</string>
    <string name="updateStudent">Update Student</string>


    <string-array name="weekDays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="levels">
        <item>A1</item>
        <item>A1+</item>
        <item>A2</item>
        <item>A2+</item>
        <item>B1</item>
        <item>B1+</item>
        <item>B2</item>
        <item>B2+</item>
        <item>C1</item>
        <item>C1+</item>
        <item>C2</item>
    </string-array>

    <string-array name="attendance">
        <item>attending</item>
        <item>excused</item>
        <item>not attending</item>
    </string-array>
    <string name="title_activity_launcher">LauncherActivity</string>

</resources>
