<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/UpdateClass"
        android:title="@string/updateClass"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/DeleteClass"
        android:title="@string/delete_Class"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/AddContent"
        android:title="@string/AddContent"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"></item>
    <group>
        <item
            android:id="@+id/AddStudent"
            android:title="@string/menuAddStudent"
            app:showAsAction="ifRoom"
            android:orderInCategory="4"></item>
        <item
            android:id="@+id/NotifyAllStudents"
            android:title="@string/NotifyAllStudents"
            app:showAsAction="ifRoom"
            android:orderInCategory="5"></item>
    </group>
</menu>