<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background"
    tools:context="app.com.jeldrik.teacherslittlehelper.UpdateClassFragment">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/line"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/updateClass"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|top">

            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newClassTitle"
                    />

                <EditText
                    android:layout_height="wrap_content"
                    android:id="@+id/newClassTitle"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newClassDays"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content">
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="32dp"
                        android:id="@+id/newClassDays"
                        android:text="@string/newClassDays"
                        android:background="@drawable/button" />
                </RelativeLayout>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newClassHour"
                    />
                <RelativeLayout
                    android:layout_width="wrap_content">
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="32dp"
                        android:text="00:00"
                        android:id="@+id/newClassStartTime"
                        android:background="@drawable/button"
                        />
                </RelativeLayout>

            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newClassDuration"
                    />
                <RelativeLayout
                    android:layout_width="wrap_content">
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="32dp"
                        android:text="00:00"
                        android:id="@+id/newClassEndTime"
                        android:background="@drawable/button"/>
                </RelativeLayout>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newClassLocation"
                    />

                <EditText
                    android:layout_height="wrap_content"
                    android:id="@+id/newClassLocation"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newClassLevel"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/updateClassLevel"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newClassInfo"
                    />

                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:gravity="left|top"
                    android:id="@+id/newClassInfo"
                    android:layout_weight="1" />


            </TableRow>
            <TableRow android:gravity="center_horizontal" android:layout_marginTop="20dp">
                <Button
                    android:layout_width="100dp"
                    android:layout_height="32dp"
                    android:id="@+id/updateClassBtn"
                    android:textColor="@color/primary_dark_material_dark"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button"
                    android:text="@string/updateContent"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>

