<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background"
    tools:context="app.com.jeldrik.teacherslittlehelper.UpdateClassContentFragment">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/h1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/updateClassContent"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newDate"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/updateClassContentFragmentnewDate"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newBook"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/updateClassContentFragmentNewBook"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newPages"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/updateClassContentFragmentNewPages"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/newInfo"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">
                <EditText
                    android:layout_width="wrap_content"
                    android:id="@+id/updateClassContentFragmentNewInfo"
                    android:inputType="textMultiLine"
                    android:layout_weight="1"
                    android:layout_span="2"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/studentTitle"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">
                <org.lucasr.twowayview.TwoWayView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/studentsListView"
                    style="@style/TwoWayView"
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:drawSelectorOnTop="false"
                    android:layout_span="2" />
            </TableRow>
            <TableRow
                android:gravity="center">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_span="2"
                    android:gravity="center">
                <Button
                    android:layout_margin="5dp"
                    android:layout_width="100dp"
                    android:layout_height="32dp"
                    android:text="@string/updateContent"
                    android:background="@drawable/button"
                    android:textColor="@color/primary_dark_material_dark"
                    android:id="@+id/updateClassContentFragmentUpdate" />
                <Button
                    android:layout_margin="5dp"
                    android:layout_width="100dp"
                    android:layout_height="32dp"
                    android:text="@string/deleteContent"
                    android:background="@drawable/button"
                    android:textColor="@color/primary_dark_material_dark"
                    android:id="@+id/updateClassContentFragmentDelete" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
